[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Duck"
version = "1.0.1"
description = "Duck is a Python-based webserver, framework, and proxy that integrates seamlessly with Django."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Brian Musakwa", email = "digreatbrian@gmail.com" },
]
maintainers = [
    { name = "Brian Musakwa", email = "digreatbrian@gmail.com" },
]
dependencies = [
    "Django>=5.1.5",
    "Jinja2>=3.1.5",
    "watchdog>=4.0.1",
    "requests>=2.31.0",
    "h2==4.2.0",
    "diskcache",
    "colorama",
    "tzdata",
    "click",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent"
]
keywords = [
    "webserver",
    "web-framework",
    "proxy",
    "Django",
    "Python",
    "HTTP",
    "WSGI",
    "Duck",
    "reverse-proxy",
    "flask",
    "tornado"
]

[project.urls]
Homepage = "https://github.com/digreatbrian/duck"
Repository = "https://github.com/digreatbrian/duck"
Issues = "https://github.com/digreatbrian/duck/issues"
Documentation = "https://github.com/digreatbrian/duck/wiki"
Createrpage = "https://brianmusakwa.link"

[project.entry-points.console_scripts]
duck = "duck.__main__:cli"

[tool.setuptools.dynamic]
version = {attr = "duck.__version__"}

[tool.setuptools.packages.find]
include = ["duck*"]