[metadata]
name = duck
version = 1.0.1
author = Brian Musakwa
author_email = digreatbrian@gmail.com
description = A python software to create webservers and handle different requests in the way you want.
long_description = file: README.MD
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/digreatbrian/duck
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir == ./duck
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ./duck
